--- a/Writerside/topics/分割长视频.md
+++ b/Writerside/topics/分割长视频.md
@@ -6,12 +6,14 @@ DashPlayer 本身对长视频播放做了优化，即使您打开十数个小时
 
 ## 如何使用
 
-这个功能需要您输入时间戳+标题格式的文本，一般在视频的评论区或者简介中会有这样的格式。
+这个功能需要您输入 `时间戳 标题` 格式的文本，一般在视频的评论区或者简介中会有这样的格式。
 
 在文本输入框中输入时间戳格式的文本，例如 `01:23:45` 代表 1 小时 23 分钟 45 秒。
+
 ![split-video.png](split-video.png)
 
 您输入后可在右边的预览区域看到识别结果，点击 `分割` 按钮即可生成短视频。
+
 ![split-video-preview.png](split-video-preview.png)
 
 为了方便您上手，这个界面下方有两个按钮，分别为：
