修复词典报错

--- a/设置页面重构前功能记录.md
+++ b/设置页面重构前功能记录.md
@@ -13,6 +13,12 @@
   6. 存储 (`storage`)
   7. 版本更新 (`update`)
 
+### 新增服务管理页面
+- 位置：`src/fronted/pages/setting/ServiceManagementSetting.tsx`
+- 统一管理 OpenAI、腾讯云翻译、有道词典服务配置
+- 使用 React Hook Form 替代自定义 Hook
+- 新增 SettingsController 处理后端逻辑
+
 ### 当前各页面功能
 
 #### 1. OpenAI 设置页面 (`OpenAiSetting.tsx`)
@@ -55,7 +61,7 @@
 
 #### 后端存储
 - 服务：`SettingService` / `SettingServiceImpl`
-- 控制器：`StorageController` (处理storage/ API路径)
+- 控制器：`StorageController` (处理storage/ API路径) + `SettingsController` (处理settings/ API路径)
 - 存储方式：通过 `store.ts` 的 `storeGet/storeSet` 方法
 - IPC通信：使用 'store-update' 事件同步状态
 
@@ -64,6 +70,11 @@
 - `storage/get` - 获取设置
 - `storage/cache/size` - 缓存大小查询
 - `storage/collection/paths` - 集合路径列表
+- `settings/get-all-services` - 获取所有服务设置
+- `settings/update-service` - 更新服务设置
+- `settings/test-openai` - 测试 OpenAI 连接
+- `settings/test-tencent` - 测试腾讯云连接
+- `settings/test-youdao` - 测试有道词典连接
 
 ### 设置项数据结构
 所有设置项定义在 `store_schema.ts` 中：
@@ -80,6 +91,12 @@ export const SettingKeyObj = {
     'apiKeys.openAi.stream': 'on',
     'translation.engine': 'tencent',
     'model.gpt.default': 'gpt-4o-mini',
+    // Service function enablement
+    'services.openai.enableSentenceLearning': 'true',
+    'services.openai.enableSubtitleTranslation': 'true',
+    'services.openai.enableDictionary': 'true',
+    'services.tencent.enableSubtitleTranslation': 'false',
+    'services.youdao.enableDictionary': 'false',
     // 其他设置...
 }
 ```
@@ -94,17 +111,53 @@ export const SettingKeyObj = {
 1. **多服务配置**：OpenAI、腾讯云、有道云
 2. **翻译引擎切换**：腾讯翻译 vs OpenAI翻译，有相应的配置显示/隐藏逻辑
 3. **应用范围控制**：
-   - OpenAI：转录、AI生成、OpenAI翻译
+   - OpenAI：转录、AI生成、OpenAI翻译、词典查询
    - 腾讯云：字幕翻译（腾讯引擎）
-   - 有道云：查单词
+   - 有道云：词典查询
 4. **复选框功能需求**：
    - 整句学习开关
    - 字幕翻译开关
+   - 词典查询开关
 5. **数据验证**：API Key格式验证
 6. **文档链接**：各服务的配置文档链接
+7. **连接测试**：各服务的连接测试功能
 
 ### 重构目标
 将三个独立页面（OpenAI、腾讯云、有道云）合并为统一的服务管理页面，使用React Hook Form替代自定义Hook，新增SettingsController处理后端逻辑。
+
+## 已完成的功能更新
+
+### 新增功能
+1. **统一服务管理页面** (`ServiceManagementSetting.tsx`)
+   - 集中管理所有 API 服务配置
+   - 实时连接测试功能
+   - 互斥功能选择逻辑
+
+2. **词典服务扩展**
+   - OpenAI 词典查询功能
+   - 有道词典查询功能
+   - 词典服务互斥选择（OpenAI vs 有道）
+
+3. **后端架构优化**
+   - 新增 `SettingsController` 处理服务设置
+   - 新增 `SettingService` 方法：`getCurrentDictionaryProvider`
+   - 词典查询缓存优化（按 provider 分别缓存）
+
+### 技术改进
+1. **前端表单管理**
+   - 使用 React Hook Form 替代自定义 Hook
+   - 实时表单状态验证
+   - 自动保存状态检测
+
+2. **后端数据管理**
+   - 服务配置统一接口 (`ApiSettingVO`)
+   - 互斥逻辑后端处理
+   - 连接测试统一接口
+
+3. **缓存优化**
+   - 词典查询缓存按服务分别存储
+   - 数据库表结构优化（添加 provider 字段）
+   - 避免不同服务间的缓存冲突
 
 ## 新的交互逻辑设计
 
@@ -132,8 +185,23 @@ AI 服务配置
 
 ### 互斥逻辑规则
 1. **字幕翻译功能**：OpenAI 和腾讯云翻译的字幕翻译复选框互斥
-2. **整句学习功能**：目前只有 OpenAI 支持
-3. **词典查询功能**：目前只有有道词典支持
+2. **整句学习功能**：目前只有 OpenAI 支持（必须启用）
+3. **词典查询功能**：OpenAI 和有道词典互斥，默认启用 OpenAI
+
+### 已知问题和修复记录
+1. **前端显示状态不一致问题**（已修复）
+   - 问题：勾选有道词典后，重新进入页面 OpenAI 词典也显示勾选
+   - 原因：前端默认值逻辑使用 `|| true` 导致 `false || true = true`
+   - 修复：改为使用 `?? true` 正确处理 null/undefined 值
+
+2. **词典缓存冲突问题**（已修复）
+   - 问题：OpenAI 和有道词典缓存相互覆盖
+   - 原因：使用相同的单词作为缓存键
+   - 修复：数据库表添加 provider 字段，按服务分别缓存
+
+3. **设置项提交逻辑问题**（已修复）
+   - 问题：多次调用 update-service 导致状态不一致
+   - 修复：保持三次调用，后端正确处理互斥逻辑
 
 ### 需要新增的设置项
 需要在 `store_schema.ts` 中新增以下设置项：
